<resources>
    <string name="app_name">Continents, Oceans and Deserts</string>
    <string name="you_are_here">You are in</string>
    <string name="prev_button">prev</string>
    <string name="Welcome_spash">Explore all the Continents \n Oceans and Deserts. </string>
    <string name="splash_image">splash image</string>
    <string name="sliderImage">slider</string>
    <string name="recimage">recima</string>
    <string name="what_is_continent">Though there are many definitions of the term “continent,” it is generally used to identify large distinct land masses that make up planet Earth’s surface. What we know as land are actually the areas which happen to be at a high enough elevation to not be flooded by the lakes, rivers, and oceans of the world which surround them. The continents shapes and boundaries are ever-changing as the water surrounding them defines the land that makes up the continent.</string>
    <string name="pacificOceantext">The Pacific Ocean is the biggest ocean on Earth, with an area of 63.8 million square miles. It is also bigger than all the land on the planet put together. It borders four continents: North America, South America, Australia, and Asia. The ocean is split into two parts that are divided by the equator. The two parts are the North Pacific Ocean and the South Pacific Ocean. The deepest part of the ocean and the whole world is the Mariana Trench, and it is 35,797 feet deep.
    \n\n<b>HISTORY OF THE PACIFIC OCEAN</b>
     \n\nIn the early 16th century, Europeans were the first to see the Pacific Ocean. Vasco Núñez de Balboa was a Spanish explorer that named the sea Mar Del Sur in 1513. But, the Pacific Ocean name came from Ferdinand Magellan, a Portuguese explorer who went on a world expedition in 1521. He named it Mar Pacifico in Portuguese, which means peaceful sea. The width of the ocean was accurately measured in 1768 by Pierre-Antoine Véron.
    \n\n<b>FEATURES OF THE PACIFIC OCEAN</b>
        \n\nThe Pacific Ocean separates North America and South America from Australia and Asia. It spreads from the Arctic area in the north to the Antarctic in the south. It stretches to 12,300 miles wide from Colombia to Indonesia, which is halfway across the planet. This number is over five times the width of the moon.
\n\nEvery year, the Pacific Ocean shrinks approximately one inch on three sides. This is because of tectonic plates underneath the surface of the Earth. The Pacific Ocean experiences many tropical storms every year, and many areas around the ocean have earthquakes and volcanoes. The Pacific Ring of Fire is the world’s biggest chain of volcanoes, with a total of 452 volcanoes.
\n\nMany seas sit along the western part of the Pacific Ocean, like the Sulu Sea, Celebes Sea, East China Sea, South China Sea, and Yellow Sea. The Pacific Ocean is connected to the Arctic Ocean by the Bering Strait. The Strait of Magellan and Drake Passage join the Pacific to the Atlantic Ocean. And the Strait of Malacca joins the Pacific Ocean and the Indian Ocean together.
\n\nAbout 50.1 percent of the ocean water on Earth is in the Pacific Ocean, measuring about 680 million cubic miles of water. The temperature of the water is very cold in some areas around 29.5 °F and then very warm at about 86 °F by the equator. It is most salty in the southeastern parts and the least salty in the far north.
\n\n<b>ECONOMY OF THE PACIFIC OCEAN</b>
        \n\nThe Pacific Ocean is used for many things to make money for countries. In the shallow areas around Australia and New Zealand, natural gas and petroleum are pulled out. Pearls are collected on the coasts of the Philippines, Panama, Australia, Japan, Nicaragua, and New Guinea.
\n\nFishing is a common activity in many areas of the Pacific Ocean. The shallow water has a lot more fish, including shellfish, salmon, herring, and swordfish. Over-fishing is a big problem in some places in the ocean.

    </string>
    <string name="atlantistxt">Covering 20% of the Earth’s entire surface, the Atlantic Ocean is the world’s second-largest ocean. It covers 29% of all of the Earth’s water surface making it second only to the Pacific Ocean. At its deepest point, the Milwaukee Deep off the coast of Puerto Rico, the Atlantic Ocean is 27,500 feet deep – that would fit a stack of almost 19 Empire State Buildings!
\n\nThe western shores of the Atlantic Ocean are the coasts of North, Central, and South America. The North American countries include Canada and the United States. All of the Central and South American countries on the Caribbean Sea including Cuba, Jamaica, Panama, Columbia, Venezuela, and many others have an Atlantic coast, as well as the South American countries of Argentina and Brazil. The warm, moist air of the southern Atlantic ocean often brings rain, hurricanes and other turbulent weather to Central America and the southern United States before heading north and bringing turbulent weather to the east coast of the United States, including the notorious Nor’easter, and heavy fog off the coast of eastern Canada.
\n\nHeading to the other side of “The Pond” as it’s known by Americans and Europeans, the Atlantic Ocean will bring you to Ireland and the United Kingdom, France, Spain and Portugal. The North Sea also brings Belgium, Germany, Denmark and Norway to the Atlantic, and Iceland can be found northwest of Europe in the Atlantic.
\n\nTraveling south from Europe, the Atlantic Ocean will bring you to Africa. Here the Atlantic Ocean touches Morocco and travels down the African continent to include Sierra Leone, the Ivory Coast, Nigeria, the Congo, Namibia, and South Africa among the many others. The comparatively cool waters of the Atlantic Ocean off the African coast often bring dense fog to the northwestern coast of Africa.
\n\nThe Atlantic Ocean is home to a wide range of wildlife including crabs, lobsters, shrimp, large whales and sharks, large mammals such as seals and dolphins, and hundreds of species of fish. The Atlantic coasts are home to dozens of species of birds including seagulls and albatross, and penguins can be found in the colder waters of the southern Atlantic. Many birds follow the migration route called the Atlantic Flyway that includes several shorter routes following the coast of North America that come together in the regions around the Gulf of Mexico near Florida, and then continue over Mexico and into the Caribbean sea.
\n\nDue to many factors including pollution, oil spills, entanglement, overfishing, and illegal harvesting, the Atlantic is also home to several endangered species including whales, dolphins, manatees, birds and fish. The North Atlantic garbage patch, an area of concentrated trash and plastics, can be found in the Atlantic Ocean between North America and Europe. \n\nIt is estimated to be hundreds of miles across in size and estimated trash density of 120,000 pieces of debris per square mile. Scientists and environmentalists are currently looking for ways to reduce the accumulation of more trash in the garbage patch.
</string>
    <string name="arctictxt">With most of its waters lying in the Arctic north polar region, the Arctic Ocean is the smallest and shallowest of the world’s five oceans. Some scientists call the Arctic Ocean the North Mediterranean Sea or the Arctic Sea. Covering approximately 5,427,000 square miles, the body of water is approximately the size of Russia. Continents that border the Arctic include Europe, Asia, and North America. The U.S. and Russia maintain floating research stations in the region.
    \n\nDue to its cold temperature, part of the ocean remains covered by ice throughout the year; however, nearly all of the water’s surface is covered in ice during winter. The water’s salt levels vary throughout the year along with temperature, though the Arctic generally contains less salt than the other four oceans due to its low evaporation rates and the large amount of freshwater that is contributed to the ocean by rivers and streams.
    \n\nSea ice covers much of the Arctic Ocean and is generally thicker during colder seasons and thinner when the weather is warmer. Portions of sea ice can be moved across the ocean by wind and water currents. Icebergs may break off frozen land areas and create dangerous conditions for ships that sail across the Arctic. They may also from glaciers in Greenland and the parts of Canada that lie furthest northwest. Because the waters of the Arctic are covered in ice for most of the year, the cold temperatures of the ice cause subfreezing air temperatures in the area. The cold air then moves toward the equator and collides with warmer air along the way, causing rain and snow.
    \n\nThere is little range between the weather from season to season in the Arctic region. Winters are generally continuously dark with clear skies, calm waters, and cold, stable weather. Summers include continuous sunlight, damp, foggy conditions, and mild cyclones that may include rain or snow.
    \n\nThe Arctic Ocean’s ecosystem is very fragile and is home to many endangered species. Phytoplankton are the only plant types that live in the Arctic Ocean, and they play a very crucial role in the local ecosystem. They consume nutrients from streams that travel from the Atlantic and Pacific Oceans and photosynthesize during the summer months when there is virtually endless sunlight. \n\nThis abundant sunlight allows phytoplankton to reproduce very quickly. However, the very limited amount of sunlight the Arctic Ocean receives during the colder months makes it difficult for phytoplankton to survive during winter. One major environmental concern for the Arctic region is the slow rate at which it changes, which makes recovery from damage to the local environment a very slow process. Natural resources that may be used for commercial purposes are also found in the Arctic Ocean, including fish, petroleum, natural gas, sand, and gravel aggregates. The political dead zone in the area has also become a recent focal point, as the area may contain large oil and gas reserves.
    </string>
    <string name="what_is_a_continent_qus">What is a Continent?</string>
    <string name="below_are_continents_of_world">These are the 7 Continents of world.</string>
    <string name="asia_image">Asia Image</string>
    <string name="africa_image">Africa_Image</string>
    <string name="europe_image">Europe_image</string>
    <string name="antarctica_image">Antarctica_image</string>
    <string name="south_america_image">South_america_image</string>
    <string name="australia_image">Australia_image</string>
    <string name="north_america_image">North_America_image</string>
    <string name="click_on_image_the_to_zoom"><u /> Click on image the to zoom</string>
    <string name="images">images</string>
    <string name="continets">Continents</string>
    <string name="oceans">Oceans</string>
    <string name="deserts">Deserts</string>
    <string name="menu_home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contact_us2">Contact Us</string>
    <string name="e_mail">E-mail:</string>
    <string name="get_in_touch_with_us_for_any_questions_and_feedback">Get in touch with us for any questions and feedback.</string>
    <string name="facebook">Facebook:</string>
    <string name="linkedin">Linkedin:</string>
    <string name="emailid">dzoneassociation@gmail.com</string>
    <string name="fbid">https://wwww.facebook.com/thedzoned/</string>
    <string name="linkid">https://wwww.linkedin.com/company/the-d-zone/</string>
</resources>