<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".contactus">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/contact_us2"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"

        android:layout_margin="20dp"
        android:text="@string/get_in_touch_with_us_for_any_questions_and_feedback"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/e_mail"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailid"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/facebook"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fbid"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/linkedin"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linkid"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        />





</LinearLayout>