<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    tools:context=".Continents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/svgone"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5dp"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/click_on_image_the_to_zoom"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:background="?android:attr/listDivider" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/what_is_a_continent_qus"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:text="@string/what_is_continent"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/below_are_continents_of_world"
            android:textSize="25sp"
            android:textStyle="bold" />


        <android.support.v7.widget.CardView
            android:id="@+id/asia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/asia_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/asia" />


        </android.support.v7.widget.CardView>







        <android.support.v7.widget.CardView
            android:id="@+id/africa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/africa_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/africa" />


        </android.support.v7.widget.CardView>





        <android.support.v7.widget.CardView
            android:id="@+id/europe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/europe_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/europe" />


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:id="@+id/antarctica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/antarctica_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/antarctica" />


        </android.support.v7.widget.CardView>




        <android.support.v7.widget.CardView
            android:id="@+id/samerica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/south_america_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/south_america" />


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:id="@+id/australia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/australia_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/australia" />


        </android.support.v7.widget.CardView>




        <android.support.v7.widget.CardView
            android:id="@+id/namaerica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/north_america_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/north_america" />


        </android.support.v7.widget.CardView>




    </LinearLayout>

</ScrollView>