<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/you_are_here"
        android:textAlignment="center"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:id="@+id/button_continents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/images"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/continents" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/continets"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:background="#757575"
                    android:textSize="30sp" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/button_oceans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/images"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/oceans" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/oceans"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:background="#757575"
                    android:textSize="30sp" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/button_desert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/images"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/desert" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/deserts"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:background="#757575"
                    android:textSize="30sp" />


            </android.support.v7.widget.CardView>


        </LinearLayout>


    </ScrollView>


</LinearLayout>